ci(build): switch to java 17 to java 25