@@ -1,8 +1,7 @@
-FROM eclipse-temurin:17.0.18_8-jre
+FROM eclipse-temurin:25.0.1_8-jre
 
-ENV PATH_TO_JAR=/opt/eno-ws/eno-ws.jar
 WORKDIR /opt/eno-ws/
-ADD ./eno-ws/target/*.jar $PATH_TO_JAR
+COPY ./eno-ws/target/*.jar /opt/eno-ws/eno-ws.jar
 
 ENV JAVA_TOOL_OPTIONS_DEFAULT \
     -XX:MaxRAMPercentage=75 \
@@ -11,10 +10,12 @@ ENV JAVA_TOOL_OPTIONS_DEFAULT \
 ENV JAVA_USER_ID=10001
 ENV JAVA_USER=java
 RUN groupadd -g "$JAVA_USER_ID" "$JAVA_USER" && \
-    useradd -r -u "$JAVA_USER_ID" -g "$JAVA_USER" "$JAVA_USER"
+    useradd -r -l -u "$JAVA_USER_ID" -g "$JAVA_USER" "$JAVA_USER"
 
 USER $JAVA_USER_ID
 
-ENTRYPOINT [ "/bin/sh", "-c", \
-    "export JAVA_TOOL_OPTIONS=\"$JAVA_TOOL_OPTIONS_DEFAULT $JAVA_TOOL_OPTIONS\"; \
-    exec java -jar $PATH_TO_JAR" ]
+CMD ["java", \
+    "-XX:MaxRAMPercentage=75", \
+    "-XX:+UseZGC", \
+    "-jar", \
+    "/opt/eno-ws/eno-ws.jar"]
